--- a/index.html
+++ b/index.html
@@ -252,21 +252,21 @@
         <div class="upfooter-bkg">
             <div class="growstopper">
                 <div class="upfooter">
-                    <a href="#">
+                    <a href="#" class="upfooter-link">
                         <div class="upfooter-item">
                             <img src="img/delivery.svg" alt="delivery" class="upfooter-item-img">
                             <div class="upfooter-item-header">Free Delivery</div>
                             <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#" class="upfooter-link">
                         <div class="upfooter-item">
                             <img src="img/discounts.svg" alt="discounts" class="upfooter-item-img">
                             <div class="upfooter-item-header second-item-header">Sales & discounts</div>
                             <div class="upfooter-item-text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="#" class="upfooter-link">
                         <div class="upfooter-item">
                             <img src="img/crown.svg" alt="crown" class="upfooter-item-img">
                             <div class="upfooter-item-header third-item-header">Quality assurance</div>
