--- a/cart.html
+++ b/cart.html
@@ -85,7 +85,7 @@
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="text" class="product-count-input" id="product1-count" value="2" pattern="[0-9]*">
+                                <input type="number" class="product-count-input" id="product1-count" value="2" pattern="[0-9]*">
                             </p>
                         </div>
                         <div class="card-close">
@@ -100,7 +100,7 @@
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="text" class="product-count-input" id="product2-count" value="2" pattern="[0-9]*">
+                                <input type="number" class="product-count-input" id="product2-count" value="2" pattern="[0-9]*">
                             </p>
                         </div>
                         <div class="card-close">
