Button proceed to checkout

--- a/cart.html
+++ b/cart.html
@@ -126,9 +126,9 @@
                         <p class="subtotalp">SUB TOTAL <span class="subtotalsum">$900</span></p>
                         <p class="grandtotalp">GRAND TOTAL <span class="totalsum">$900</span></p>
                         <div class="line">
-                            <a href="" class="proceedbutton">
+                            <button type="submit" class="proceedbutton">
                                 PROCEED TO CHECKOUT
-                            </a>
+                            </button>
                         </div>
                     </div>
                 </div>
