Fix bugs after getting response on homework for lesson 6

--- a/product.html
+++ b/product.html
@@ -103,7 +103,7 @@
                     $561
                 </p>
                 <hr class="dc-under-price">
-                <ul class="filter-n-sort__sort">
+                <ul class="filter-n-sort-sort">
                     <li class="sort-btn"><a href="#" class="transparent-href">CHOOSE COLOR
                     <img src="img/down-arrow-icon.svg" alt="down-arrow" class="sort-details-arrow"></a>
                     </li>
