Fix ambernou issue with socials

--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <title>The Brand – Product</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900">
     <link rel="stylesheet" href="styles/product.css">
+    <script src="https://kit.fontawesome.com/a067714524.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -212,23 +213,23 @@
                 <div class="downfooter">
                     <div class="socials">
                         <a href="https://www.facebook.com">
-                            <div class="socials__item">
-                                <img src="img/facebook.svg" alt="facebook">
+                            <div class="social-item">
+                                <i class="fab fa-facebook-f icon_pic"></i>
                             </div>
                         </a>
                         <a href="https://www.instagram.com">
-                            <div class="socials__item">
-                                <img src="img/instagram.svg" alt="instagram">
+                            <div class="social-item">
+                                <i class="fab fa-instagram icon_pic"></i>
                             </div>
                         </a>
                         <a href="https://www.pinterest.ru">
-                            <div class="socials__item">
-                                <img src="img/pinterest.svg" alt="snP">
+                            <div class="social-item">
+                                <i class="fab fa-pinterest-p icon_pic"></i>
                             </div>
                         </a>
                         <a href="https://twitter.com">
-                            <div class="socials__item">
-                                <img src="img/twitter.svg" alt="twitter">
+                            <div class="social-item">
+                                <i class="fab fa-twitter icon_pic"></i>
                             </div>
                         </a>
                     </div>
