Fix 3 ambernou issues

--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="number" class="product-count-input" id="product1-count" value="2" pattern="[0-9]*">
+                                <input type="number" min="0" class="product-count-input" id="product1-count" value="2" required>
                             </p>
                         </div>
                         <div class="card-close">
@@ -101,7 +101,7 @@
                             <p class="card-header">MANGO PEOPLE<br> T-SHIRT</p>
                             <p class="card-data">
                                 Price: <span class="price-span">$300</span><br> Color: <span class="color-span">Red</span><br> Size: <span class="size-span">Xl</span><br> Quantity:
-                                <input type="number" class="product-count-input" id="product2-count" value="2" pattern="[0-9]*">
+                                <input type="number" min="0" class="product-count-input" id="product2-count" value="2" required>
                             </p>
                         </div>
                         <div class="card-close">
