--- a/catalog.html
+++ b/catalog.html
@@ -142,8 +142,10 @@
                 <div class="sort-btn">TRENDING NOW
                     <img src="img/down-arrow-icon.svg " alt="down-arrow" class="sort-details-arrow">
                 </div>
-                <div class="sort-btn" onclick="openSizeMenu()" id="sizeBtn">SIZE
-                    <img src="img/down-arrow-icon.svg " alt="down-arrow" class="sort-details-arrow">
+                <div class="size-btn-container">
+                    <div class="sort-btn" onclick="openSizeMenu()" id="sizeBtn">SIZE
+                        <img src="img/down-arrow-icon.svg " alt="down-arrow" class="sort-details-arrow">
+                    </div>
                     <div class="size-menu" id="sizeMenuHead">
                         <div class="size-menu-elem">
                             <input id="xs" type="checkbox" class="checkbox"><label for="xs" class="check-label">XS</label>
