--- a/registration.html
+++ b/registration.html
@@ -97,8 +97,8 @@
                 </fieldset>
                 <fieldset class="reg-form-fieldset">
                     <label class="reg-lab">Login details</label>
-                    <input type="text" name="e-mail" id="eMail" class="reg-input" placeholder="Email">
-                    <input type="text" name="password" id="password" class="reg-input reg-pass" placeholder="Password">
+                    <input type="email" name="e-mail" id="eMail" class="reg-input" placeholder="Email">
+                    <input type="password" name="password" id="password" class="reg-input reg-pass" placeholder="Password">
                     <p class="reg-pass-help">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
                 </fieldset>
                 <button type="submit" class="submit-btn">
